# Remamber_flask

./: .gitignore  README.MD  app.py  pyproject.toml
app/: admin_views.py  views.py
app/static/css/: style.css
app/templates/admin/: dashboard.html
app/templates/admin/templates/: admin_template.html
app/templates/public/: about.html  index.html  jinja.html  sign_up.html
app/templates/public/templates/: public_template.html
