[tool.poetry]
name = "flask-serial"
version = "0.1.0"
description = ""
authors = ["Victor Karpov <nilafe4@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_serial"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
